<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <TextView
        android:id="@+id/bluetooth_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gps_tx"
        android:layout_alignStart="@+id/gps_tx"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/bluetooth_state"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/connect_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mag"
        android:layout_alignStart="@+id/bluetooth_tx"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/connect" />

    <Button
        android:id="@+id/start_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/connect_bt"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0px"
        android:layout_toEndOf="@+id/connect_bt"
        android:text="@string/start" />

    <Button
        android:id="@+id/stop_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/start_bt"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/start_bt"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/gps_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/map"
        android:layout_marginStart="5dp"
        android:text="@string/gps_state"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/gps_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/gps_tx"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/bluetoothState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bluetooth_tx"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/bluetooth_tx"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/save_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_bt"
        android:layout_alignStart="@+id/connect_bt"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/save" />

    <TextView
        android:id="@+id/mag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="500dp"
        android:text="@string/now_mag"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/mode_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_bt"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/save_bt"
        android:text="@string/mode" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bluetooth_tx"
        android:layout_alignStart="@+id/bluetooth_tx"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/target_point"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/now_point"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/status"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</RelativeLayout>